--- a/개요.md
+++ b/개요.md
@@ -30,7 +30,11 @@ tilte:
 
 #### 2. 주요일정
 
-<p></p>
+<style>
+  table > tbody> tr > td > p > span {
+    font-size: 10px;
+  }
+</style>
 <table cellspacing="0" cellpadding="0" style="border-collapse: collapse; border: 0px none; table-layout: auto; width:100%;">
 <tbody><tr>
 	<td valign="middle" bgcolor="#f8f8f8" style="overflow: hidden; width: 170px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
