Chore: Change table style

--- a/개요.md
+++ b/개요.md
@@ -31,82 +31,58 @@ tilte:
 #### 2. 주요일정
 
 <style>
-  table > tbody> tr > td > p > span {
-    font-size: 10px;
+  .customTable1 tr th {
+    width: 30%;
+  }
+  .customTable2 tr td:nth-child(1) {
+    width: 30%
+  }
+  .customTable2 tr td:nth-child(2) {
+    width: 35%
+  }
+  .customTable2 tr td:nth-child(3) {
+    width: 35%
   }
 </style>
-<table cellspacing="0" cellpadding="0" style="border-collapse: collapse; border: 0px none; table-layout: auto; width:100%;">
-<tbody><tr>
-	<td valign="middle" bgcolor="#f8f8f8" style="overflow: hidden; width: 170px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">특별세션 신청</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" bgcolor="#ffffff" style="overflow: hidden; width: 389px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">8월 1일(월) ~ 10월 21일(금)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-<tr>
-	<td valign="middle" bgcolor="#f8f8f8" style="overflow: hidden; width: 170px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">초록제출</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" bgcolor="#ffffff" style="overflow: hidden; width: 389px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">9월 1일(목) ~ 10월 21일(금)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-<tr>
-	<td valign="middle" bgcolor="#f8f8f8" style="overflow: hidden; width: 170px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">사전등록</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" bgcolor="#ffffff" style="overflow: hidden; width: 389px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">9월 1일(목) ~ 10월 21일(금)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-<tr>
-	<td valign="middle" bgcolor="#f8f8f8" style="overflow: hidden; width: 170px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">부스/지면광고 신청</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" bgcolor="#ffffff" style="overflow: hidden; width: 389px; height: 36px; border: 0.8pt solid rgb(230, 230, 230); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: &quot;Rix고딕 B&quot;; border-width: 0px;">8월 1일(월) ~ 10월 21일(금)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-</tbody></table>
-
----
+<table class="customTable1">
+  <tr>
+    <th>특별세션 신청</th>
+    <td>8월 1일(월) ~ 10월 21일(금)</td>
+  </tr>
+  <tr>
+    <th>초록제출</th>
+    <td>9월 1일(목) ~ 10월 21일(금)</td>
+  </tr>
+  <tr>
+    <th>사전등록</th>
+    <td>9월 1일(목) ~ 10월 21일(금)</td>
+  </tr>
+  <tr>
+    <th>부스/지면광고 신청</th>
+    <td>8월 1일(월) ~ 10월 21일(금)</td>
+  </tr>
+</table>
 
 <p></p>
 
-<table cellspacing="0" cellpadding="0" style="border-collapse: collapse; border: 0px none; table-layout: fixed;">
-<tbody><tr>
-	<td valign="middle" bgcolor="#efefef" style="overflow: hidden; width: 137px; height: 21px; border-width: 1.134pt 0.8pt 0.8pt; border-style: solid solid solid none; border-color: rgb(49, 95, 151) rgb(0, 0, 0) rgb(0, 0, 0); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">구분</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" bgcolor="#efefef" style="overflow: hidden; width: 161px; height: 21px; border-width: 1.134pt 0.8pt 0.8pt; border-style: solid; border-color: rgb(49, 95, 151) rgb(0, 0, 0) rgb(0, 0, 0); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">사전등록</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" bgcolor="#efefef" style="overflow: hidden; width: 199px; height: 21px; border-width: 1.134pt 0.8pt 0.8pt; border-style: solid; border-color: rgb(49, 95, 151) rgb(0, 0, 0) rgb(0, 0, 0); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">현장등록(추가금액)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-<tr>
-	<td valign="middle" style="overflow: hidden; width: 137px; height: 20px; border-width: 0.8pt; border-style: solid solid solid none; border-color: rgb(0, 0, 0); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">학생(회원/비회원)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" style="overflow: hidden; width: 161px; height: 20px; border: 0.8pt solid rgb(0, 0, 0); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">120/220</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" style="overflow: hidden; width: 199px; height: 20px; border: 0.8pt solid rgb(0, 0, 0); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">170/320</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-<tr>
-	<td valign="middle" style="overflow: hidden; width: 137px; height: 20px; border-width: 0.8pt 0.8pt 1.134pt; border-style: solid solid solid none; border-color: rgb(0, 0, 0) rgb(0, 0, 0) rgb(49, 95, 151); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">일반(회원/비회원)</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" style="overflow: hidden; width: 161px; height: 20px; border-width: 0.8pt 0.8pt 1.134pt; border-style: solid; border-color: rgb(0, 0, 0) rgb(0, 0, 0) rgb(49, 95, 151); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">240/390</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-	<td valign="middle" style="overflow: hidden; width: 199px; height: 20px; border-width: 0.8pt 0.8pt 1.134pt; border-style: solid; border-color: rgb(0, 0, 0) rgb(0, 0, 0) rgb(49, 95, 151); padding: 1.4pt 5.1pt;">
-	<p class="HStyle0" style="text-align: center; border-width: 0px;"><span style="position: relative; font-family: 휴먼고딕; border-width: 0px;">290/490</span><span class="hnc_page_break" style="word-spacing: -0.5em; border-width: 0px;">&nbsp;</span></p>
-	</td>
-</tr>
-
-</tbody></table>
+<table class="customTable2">
+  <thead>
+    <tr>
+      <th>구분</th>
+      <th>사전등록</th>
+      <th>현장등록 (추가금액)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>학생 (회원/비회원)</td>
+      <td>120/220</td>
+      <td>170/320</td>
+    </tr>
+    <tr>
+      <td>일반 (회원/비회원)</td>
+      <td>240/390</td>
+      <td>290/490</td>
+    </tr>
+  </tbody>
+</table>
