Chore: table new style

--- a/개요.md
+++ b/개요.md
@@ -34,6 +34,7 @@ tilte:
   .customTable1 tr th {
     width: 30%;
   }
+
   .customTable2 tr td:nth-child(1) {
     width: 30%
   }
@@ -75,14 +76,48 @@ tilte:
   </thead>
   <tbody>
     <tr>
-      <td>학생 (회원/비회원)</td>
+      <th>학생 (회원/비회원)</th>
       <td>120/220</td>
       <td>170/320</td>
     </tr>
     <tr>
-      <td>일반 (회원/비회원)</td>
+      <th>일반 (회원/비회원)</th>
       <td>240/390</td>
       <td>290/490</td>
+    </tr>
+  </tbody>
+</table>
+
+<p></p>
+
+<table>
+  <thead>
+    <tr>
+      <th rowspan="2" colspan="1">구분</th>
+      <th rowspan="1" colspan="2">사전등록</th>
+      <th rowspan="1" colspan="2">현장등록</th>
+    </tr>
+    <tr>
+      <th style="width: 18.33%">회원</th>
+      <th style="width: 17.52%">비회원</th>
+      <th style="width: 18.33%">회원</th>
+      <th style="width: 18.6%">비회원</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th style="width: 24.26%">일반</th>
+      <td style="width: 18.33%">18만원</td>
+      <td style="width: 17.52%">28만원</td>
+      <td style="width: 18.33%">20만원</td>
+      <td style="width: 18.6%">30만원</td>
+    </tr>
+    <tr>
+      <th style="width: 26.95%" rowspan="1">학생</th>
+      <td rowspan="1" style="width: 18.33%">8만원</td>
+      <td rowspan="1" style="width: 17.52%">13만원</td>
+      <td rowspan="1" style="width: 18.33%">10만원</td>
+      <td rowspan="1" style="width: 18.6%">15만원</td>
     </tr>
   </tbody>
 </table>
