--- a/개요.md
+++ b/개요.md
@@ -2,7 +2,7 @@
 layout: default
 tilte:
 ---
-
+<br>
 <div class="gayheader">
   <span>개요</span>
   <div></div>
@@ -57,7 +57,7 @@ tilte:
     border-color: #eae5e5;
     color: black;
     text-align: center;
-    padding: 10px 20px;
+    padding: 15px 20px;
     font-family: 'Noto Sans','맑은 고딕','Malgun Gothic',Arial,Helvetica,sans-serif,Lucida,'Grande','Microsoft YaHei','Hiragino Sans GB', 'SimSun', 'Meiryo';
     font-size: 20px;
 }
@@ -129,10 +129,12 @@ tilte:
 
 <p>
 <br>
-※ 사전등록 신청<br>
+- 사전등록 신청<br>
 <a href="https://www.google.com" class="button">☞ 사전등록</a><br>
-사전등록은 구글폼을 이용하기 때문에 구글을 사용할 수 없는 환경에서는 등록이 불가능합니다(모바일 데이터 활용 가능).<br>
-사전등록 후, 이메일을 못 받으신 분은 사무국 이메일(geoaidata@gmail.com)으로 문의하여 주시기 바랍니다.<br><br>
+</p>
+<p class="h6">
+*사전등록은 구글폼을 이용하기 때문에 구글을 사용할 수 없는 환경에서는 등록이 불가능합니다(모바일 데이터 활용 가능).<br>
+*사전등록 후, 이메일을 못 받으신 분은 사무국 이메일(geoaidata@gmail.com)으로 문의하여 주시기 바랍니다.<br><br>
 </p>
 
 
@@ -190,7 +192,7 @@ tilte:
 - 특별셰션 구성: 1세션당 논문 4~6편으로 구성<br>
 - 특별세션 비용: 학회 사무국으로 문의<br>
 - 신청방법: 특별세션 참가 신청서를 작성하여 사무국(geoaidata@gmail.com)으로 송부<br>
-<a href="https://www.google.com" class="button">☞ 특별세션 초록접수 템플릿(*.xls)</a><br>
+<a href="https://www.google.com" class="button">☞ 특별세션 참가신청서</a><br>
 </p>
 
 <p class="h6">
@@ -206,5 +208,22 @@ tilte:
 <h4>6. 부스/지면광고 신청서</h4>
 <br>
 <p>
-
+- 프로그램 광고 및 홍보부스 협찬 비용: 학회 사무국으로 문의<br>
+- 프로그램집 광고 협찬<br>
+&ensp;1) 광고크기: A4 전면 칼라<br>
+&ensp;2) 광고파일 제출: 8월 1일(월)-10월 21일(금)<br>
+&ensp;3) 신청 방법: 부스/지면광고 신청서를 작성하여 사무국으로 송부<br>
+<a href="https://www.google.com" class="button">☞ 부스/지면광고 신청서</a><br>
+- 부스 전시 기관<br>
+&ensp;1) 부스운영시간: 11월 16-17일<br>
 </p>
+<br>
+<p class="h6">
+<br>
+문의:<br>
+- 이승국 총무이사 (051-629-6627, seungkuk.lee@pknu.ac.kr)<br>
+- 정분화 사무국장 (02-6490-5682, geoaidata@gmail.com)<br>
+</p>
+<br>
+
+
