--- a/초록접수.md
+++ b/초록접수.md
@@ -2,6 +2,7 @@
 layout: default
 tilte:
 ---
+
 <style>
   .customTable1 tr th {
     width: 30%;
@@ -30,7 +31,6 @@ tilte:
     font-size: 20px;
 }
 
-  }
 </style>
 
 <br>
@@ -49,7 +49,7 @@ tilte:
 
 <p>
 - 포맷에 맞춘 초록(2페이지 이내)을 홈페이지에 등록<br>
-<a href="https://www.google.com" class="button">☞ 초록템플릿(*.doc)</a><br><br>
+<a href="https://www.google.com" target="_blank" class="button">☞ 초록템플릿(*.doc)</a><br><br>
 - 초록템플릿(*.doc): 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
 <a href="https://www.google.com" class="button">☞ 초록접수</a>
 </p>
@@ -81,7 +81,6 @@ tilte:
 *특별세션 초록접수는 아래 엑셀파일을 다운로드 받아 정보를 입력한 후, 사무국 이메일(geoaidata@gmail.com)로 송부.<br>
 <p>
 
-
 <p class="h6">
 <br>
 <br>
@@ -97,4 +96,3 @@ tilte:
 <p class="h4">
 초록논문 신청분야
 </p>
-
