--- a/fall/숙박안내.md
+++ b/fall/숙박안내.md
@@ -30,7 +30,8 @@ tilte:
     font-size: 20px;
 }
 
-  }
+
+
 </style>
 
 <div class="gaybar__container">
@@ -47,3 +48,163 @@ tilte:
 </div>
 
 <br>
+
+<p class="h4">
+☞ 그랜드하얏트 제주 주변 4성급 호텔 리스트
+</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>호텔명</th>
+      <th>가격대(1박)</th>
+      <th>거리</th>
+      <th>시설</th>
+      <th>연락처</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th style="width: 20%">엠버시티호텔</th>
+      <td style="width: 20%">5~7만원</td>
+      <td style="width: 20%">도보 3분</td>
+      <td style="width: 20">무료 주차/Wi-Fi</td>
+      <td style="width: 20">064-711-8500</td>    
+    </tr>
+        <tr>
+      <th style="width: 20%">위드스테이호텔</th>
+      <td style="width: 20%">5~7만원</td>
+      <td style="width: 20%">도보 3분</td>
+      <td style="width: 20">무료 주차/Wi-Fi</td>
+      <td style="width: 20">064-900-2055~6</td>    
+    </tr>
+    <tr>
+      <th style="width: 20%">신라스테이</th>
+      <td style="width: 20%">11~13만원</td>
+      <td style="width: 20%">도보 10분</td>
+      <td style="width: 20">무료 주차/Wi-Fi</td>
+      <td style="width: 20">064-711-9000</td>    
+    </tr>
+    <tr>
+      <th style="width: 20%">롯데시티호텔</th>
+      <td style="width: 20%">14~15만원</td>
+      <td style="width: 20%">도보 12분</td>
+      <td style="width: 20">무료 주차/Wi-Fi</td>
+      <td style="width: 20">064-730-1000</td>    
+    </tr>
+  </tbody>
+</table>
+
+<br>
+
+<p class="h4">
+1. 앰버 시티 호텔
+</p>
+<img src="../assets/img/hotel1.png " style="width:100%;height:100%;">
+<br>
+<br>
+<br>
+
+<p class="h4">
+2. 위드스테이 호텔
+</p>
+<img src="../assets/img/hotel2.png" style="width:100%;height:100%;">
+<br>
+<br>
+<br>
+
+<p class="h4">
+3. 신라스테이 호텔
+</p>
+<img src="../assets/img/hotel3.png" style="width:100%;height:100%;">
+<br>
+<br>
+<br>
+
+<p class="h4">
+4. 롯데시티 호텔
+</p>
+<img src="../assets/img/hotel4.png" style="width:100%;height:100%;">
+<br>
+<br>
+<br>
+
+
+<p class="h4">
+호텔 위치
+</p>
+<head>
+    <meta charset="utf-8">
+    <title>여러개 마커에 이벤트 등록하기1</title>
+</head>
+<body>
+<div id="map" style="width:100%;height:500px;"></div>
+
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a7cd9167c489c4e0a033ffc88093a8e2"></script>
+<script>
+var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
+    mapOption = { 
+        center: new kakao.maps.LatLng(33.4872830885566, 126.4843367643409), // 지도의 중심좌표
+        level: 5 // 지도의 확대 레벨
+    };
+
+var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+ 
+// 마커를 표시할 위치와 내용을 가지고 있는 객체 배열입니다 
+var positions = [
+    {
+        content: '<div style="text-align: center;">&emsp;그랜드하얏트</div>', 
+        latlng: new kakao.maps.LatLng(33.485232969267464, 126.4813362112728)
+    },
+    {
+        content: '<div style="text-align: center;">&emsp;&emsp;엠버시티</div>', 
+        latlng: new kakao.maps.LatLng(33.486311740246514, 126.48166333438047)
+    },
+    {
+        content: '<div>&emsp;&emsp;위드스테이</div>', 
+        latlng: new kakao.maps.LatLng(33.48574788907229, 126.48373793838033)
+    },
+    {
+        content: '<div>&emsp;&emsp;신라스테이</div>', 
+        latlng: new kakao.maps.LatLng(33.48543482554081, 126.49087884319584)
+    },
+    {
+        content: '<div>&emsp;&emsp;롯데시티</div>',
+        latlng: new kakao.maps.LatLng(33.490663939341445, 126.48647955141547)
+    }
+];
+
+for (var i = 0; i < positions.length; i ++) {
+    // 마커를 생성합니다
+    var marker = new kakao.maps.Marker({
+        map: map, // 마커를 표시할 지도
+        position: positions[i].latlng // 마커의 위치
+    });
+
+    // 마커에 표시할 인포윈도우를 생성합니다 
+    var infowindow = new kakao.maps.InfoWindow({
+        content: positions[i].content // 인포윈도우에 표시할 내용
+    });
+
+    // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록합니다
+    // 이벤트 리스너로는 클로저를 만들어 등록합니다 
+    // for문에서 클로저를 만들어 주지 않으면 마지막 마커에만 이벤트가 등록됩니다
+    kakao.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, infowindow));
+    kakao.maps.event.addListener(marker, 'mouseout', makeOutListener(infowindow));
+}
+
+// 인포윈도우를 표시하는 클로저를 만드는 함수입니다 
+function makeOverListener(map, marker, infowindow) {
+    return function() {
+        infowindow.open(map, marker);
+    };
+}
+
+// 인포윈도우를 닫는 클로저를 만드는 함수입니다 
+function makeOutListener(infowindow) {
+    return function() {
+        infowindow.close();
+    };
+}
+</script>
+</body>
