--- a/fall/위원회.md
+++ b/fall/위원회.md
@@ -35,6 +35,7 @@ tilte:
 </style>
 
 <br>
+<br>
 <div class="gayheader">
   <span>위원회</span>
   <div></div>
@@ -171,10 +172,59 @@ tilte:
       <td>강원대학교</td>
     </tr>
     <tr>
-      <th rowspan=1>위원</th>
-      <td> </td>
-      <td> </td>
+      <th rowspan=14>위원</th>
+      <td>강기묵</td>
+      <td>K-Water연구원</td>
     </tr>
+    <tr>
+      <td>구형모</td>
+      <td>서울시립대학교</td>
+    </tr>
+    <tr>
+      <td>김근한</td>
+      <td>한국환경연구원</td>
+    </tr>
+    <tr>
+      <td>박윤희</td>
+      <td>한국해양과학기술원</td>
+    </tr>
+    <tr>
+      <td>심재헌</td>
+      <td>한국농촌경제연구원</td>
+    </tr>
+    <tr>
+      <td>오관영</td>
+      <td>한국항공우주연구원</td>
+    </tr>
+    <tr>
+      <td>우한별</td>
+      <td>산림청</td>
+    </tr>
+    <tr>
+      <td>유재형</td>
+      <td>충남대학교</td>
+    </tr>
+    <tr>
+      <td>이상훈</td>
+      <td>국립생태원</td>
+    </tr>
+    <tr>
+      <td>이선민</td>
+      <td>한국환경연구원</td>
+    </tr>
+    <tr>
+      <td>정욱교</td>
+      <td>부경대학교</td>
+    </tr>
+    <tr>
+      <td>정진아</td>
+      <td>경북대학교</td>
+    </tr>
+    <tr>
+      <td>지준화</td>
+      <td>극지연구소</td>
+    </tr>
+
  </tbody>
 </table>
 
@@ -210,9 +260,21 @@ tilte:
       <td>K-Water연구원</td>
     </tr>
     <tr>
-      <th rowspan=1>위원</th>
-      <td> </td>
-      <td> </td>
+      <th rowspan=4>위원</th>
+      <td>박숭환</td>
+      <td>한국해양과학기술원</td>
+    </tr>
+    <tr>
+      <td>박정원</td>
+      <td>극지연구소</td>
+    </tr>
+    <tr>
+      <td>이경상</td>
+      <td>한국해양과학기술원</td>
+    </tr>
+    <tr>
+      <td>이윤경</td>
+      <td>세종대학교</td>
     </tr>
  </tbody>
 </table>
