--- a/fall/사전등록.md
+++ b/fall/사전등록.md
@@ -34,6 +34,7 @@ tilte:
 </style>
 
 <br>
+<br>
 <div class="gayheader">
   <span>사전등록</span>
   <div></div>
@@ -65,16 +66,16 @@ tilte:
     <tr>
       <th style="width: 24.26%">일반</th>
       <td style="width: 18.33%">24만원</td>
-      <td style="width: 17.52%">39만원</td>
-      <td style="width: 18.33%">29만원</td>
-      <td style="width: 18.6%">49만원</td>
+      <td style="width: 17.52%">36만원</td>
+      <td style="width: 18.33%">27만원</td>
+      <td style="width: 18.6%">39만원</td>
     </tr>
     <tr>
       <th style="width: 26.95%" rowspan="1">학생</th>
       <td rowspan="1" style="width: 18.33%">12만원</td>
-      <td rowspan="1" style="width: 17.52%">22만원</td>
-      <td rowspan="1" style="width: 18.33%">29만원</td>
-      <td rowspan="1" style="width: 18.6%">49만원</td>
+      <td rowspan="1" style="width: 17.52%">18만원</td>
+      <td rowspan="1" style="width: 18.33%">14만원</td>
+      <td rowspan="1" style="width: 18.6%">22만원</td>
     </tr>
   </tbody>
 </table>
@@ -89,10 +90,18 @@ tilte:
 <p>
 <br>
 아래의 [온라인 사전등록] 버튼을 클릭 후 신청서 작성 및 제출<br>
-<a href="https://www.google.com" class="button">☞ 온라인사전등록</a><br>
+<a href="https://www.google.com" class="button">☞ 사전등록 온라인신청</a><br>
 </p>
 
 <p class="h6">
-*사전등록은 구글폼을 이용하기 때문에 구글을 사용할 수 없는 환경에서는 등록이 불가능합니다(모바일 데이터 활용 가능).<br>
+*사전등록은 네이버폼을 이용하기 때문에 네이버를 사용할 수 없는 환경에서는 등록이 불가능합니다(모바일 데이터 활용 가능).<br>
 *사전등록 후, 이메일을 못 받으신 분은 사무국 이메일(geoaidata@gmail.com)으로 문의하여 주시기 바랍니다.<br><br>
+</p>
+
+<p class="h6">
+<br>
+<br>
+문의:<br>
+- 이승국 총무이사 (051-629-6627, seungkuk.lee@pknu.ac.kr)<br>
+- 정분화 사무국장 (02-6490-5682, geoaidata@gmail.com)<br>
 </p>
