--- a/fall/초록접수.md
+++ b/fall/초록접수.md
@@ -34,6 +34,7 @@ tilte:
 </style>
 
 <br>
+<br>
 <div class="gayheader">
   <span>초록접수</span>
   <div></div>
@@ -49,29 +50,18 @@ tilte:
 
 <p>
 - 포맷에 맞춘 초록(2페이지 이내)을 홈페이지에 등록<br>
-<a href="https://www.google.com" target="_blank" class="button">☞ 초록템플릿(*.doc)</a><br><br>
-- 초록템플릿(*.doc): 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
-<a href="https://www.google.com" class="button">☞ 초록접수</a>
+- <a href="../file/abstract_template.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
+<a href="https://www.google.com" class="button">☞ 초록접수 온라인신청</a>
 </p>
-
+<br>
 <p class="h6">
 <br>
-*초록접수는 구글폼을 이용하기 떄문에 구글을 사용할 수 없는 환경에서는 접수가 불가합니다(모바일 데이터 활용가능).<br>
+*초록접수는 네이버폼을 이용하기 떄문에 네이버를 사용할 수 없는 환경에서는 접수가 불가합니다(모바일 데이터 활용가능).<br>
 *초록접수 후, 이메일을 못받으신 분은 사무국 이메일(geoaidata@gmail.com)로 문의하시길 바랍니다.<br>
-*초록접수는 마감일까지 수정이 가능합니다.<br><br><br>
+*초록접수는 마감일까지 수정이 가능합니다.<br>
 </p>
 
-<p>
-<a href="https://www.google.com" class="button">☞ 초록접수(네이버폼)</a>
-</p>
-
-<p class="h6">
-<br>
-*구글폼을 사용할 수 없는 경우, 네이버폼으로 초록 접수를 진행. 다만, 등록 이메일이 발신되지 않으며, 접수후 변경이 불가합니다.<br>
-*변경이 필요한 경우, 사무국 이메일(geoaidata@gmail.com)로 문의하시길 바랍니다.<br><br> 
-<p>
-
-<p>
+<!-- <p>
 <br>
 <a href="https://www.google.com" class="button">☞ 특별세션 초록접수 템플릿(*.xls)</a>
 </p>
@@ -79,7 +69,7 @@ tilte:
 <p class="h6">
 <br>
 *특별세션 초록접수는 아래 엑셀파일을 다운로드 받아 정보를 입력한 후, 사무국 이메일(geoaidata@gmail.com)로 송부.<br>
-<p>
+<p> -->
 
 <p class="h6">
 <br>
@@ -96,3 +86,114 @@ tilte:
 <p class="h4">
 초록논문 신청분야
 </p>
+<br>
+
+<table>
+  <thead>
+    <tr>
+      <th style="width: 35%;">일반세션 분야</th>
+      <th style="width: 35%;">세부분야</th>
+      <th>준비위원</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th rowspan=6>GeoAI데이터 제작 및 공유</th>
+      <td>어노테이션 기법 및 툴</td>
+      <td rowspan=6>
+      유재형(충남대학교)<br>
+      이선민(한국환경연구원)
+      </td>
+    </tr>
+    <tr>
+      <td>데이터 포맷</td>
+    </tr>
+    <tr>
+      <td>데이터 언밸런스</td>
+    </tr>
+    <tr>
+      <td>데이터 검수 기법</td>
+    </tr>
+    <tr>
+      <td>데이터 분할 기술</td>
+    </tr>
+    <tr>
+      <td>기타</td>
+    </tr>
+    <tr>
+      <th rowspan=6>GeoAI모델 개발 및 분석</th>
+      <td>데이터 분류</td>
+      <td rowspan=6></td>
+    </tr>
+    <tr>
+      <td>데이터 검출</td>
+    </tr>
+    <tr>
+      <td>데이터 분할</td>
+    </tr>
+    <tr>
+      <td>데이터 퓨전</td>
+    </tr>
+    <tr>
+      <td>데이터 분석</td>
+    </tr>
+    <tr>
+      <td>기타</td>
+    </tr>
+    <tr>
+      <th rowspan=13>GeoAI데아터 활용</th>
+      <td>지질분야</td>
+      <td rowspan=13>
+      강기묵(K-Wate연구원)<br>
+      구형모(서울시립대학교)<br>
+      김근한(한국환경연구원)<br>
+      박윤희(한국해양과학기술원)<br>
+      심재헌(한국농촌경졔연구원)<br>
+      오관영(한국항공우주연구원)<br>
+      우한별(산림청)<br>
+      이상훈(국립생태원)<br>
+      정욱교(부경대학교)<br>
+      정진아(경북대학교)<br>
+      지준화(극지연구소)<br>
+      </td>
+    </tr>
+    <tr>
+      <td>해양분야</td>
+    </tr>
+    <tr>
+      <td>극지분야</td>
+    </tr>
+    <tr>
+      <td>환경분야</td>
+    </tr>
+    <tr>
+      <td>항공우주분야</td>
+    </tr>
+    <tr>
+      <td>수자원분야</td>
+    </tr>
+    <tr>
+      <td>생태분야</td>
+    </tr>
+    <tr>
+      <td>산림분야</td>
+    </tr>
+    <tr>
+      <td>농업분야</td>
+    </tr>
+    <tr>
+      <td>기상분야</td>
+    </tr>
+    <tr>
+      <td>재해분야</td>
+    </tr>
+    <tr>
+      <td>공간정보분야</td>
+    </tr>
+    <tr>
+      <td>기타</td>
+    </tr>
+    
+    
+  </tbody>
+</table>
