--- a/fall/특별세션.md
+++ b/fall/특별세션.md
@@ -34,6 +34,7 @@ tilte:
   }
 </style>
 
+<br>
 <div class="gaybar__container">
   <ul>
     <li><a href="../특별세션"> 특별세션 </a></li>
@@ -56,18 +57,18 @@ tilte:
 <p>
 - 특별셰션 구성: 1세션당 논문 4~6편으로 구성<br>
 - 특별세션 비용: 학회 사무국으로 문의<br>
-- 신청방법: 특별세션 참가 신청서를 작성하여 사무국(geoaidata@gmail.com)으로 송부<br>
-<a href="https://www.google.com" class="button">☞ 특별세션 참가신청서</a><br>
-<hr>
+- 신청방법: <a href="../file/특별세션신청서.hwp" download>특별세션 참가 신청서[다운로드]</a>와 <a href="../file/특별세션_초록접수.xlsx" download>특별세션 초록 템플릿[다운로드]</a> 작성하여 시스템에 파일을 업로드<br>
+<a href="https://www.google.com" class="button">☞ 특별세션 온라인신청</a><br>
+
+<!-- <hr>
 <br>
 <a href="https://www.google.com" class="button">☞ 특별세션 초록접수 템플릿(*.xls)</a><br>
 </p>
 
 <p class="h6">
 *특별세션 초록접수는 아래 엑셀파일을 다운로드 받아 정보를 입력한 후, 사무국 이메일(geoaidata@gmail.com)로 발송
-</p>
+</p> -->
 
-<br>
 <p class="h6">
 <br>
 문의:<br>
