--- a/fall/부스및지면광고.md
+++ b/fall/부스및지면광고.md
@@ -34,6 +34,7 @@ tilte:
   }
 </style>
 
+<br>
 <div class="gaybar__container">
   <ul>
     <li><a href="../특별세션"> 특별세션 </a></li>
@@ -58,20 +59,23 @@ tilte:
 - 프로그램 광고 및 홍보부스 협찬 비용: 학회 사무국으로 문의<br>
 - 프로그램집 광고 협찬<br>
 &ensp;1) 광고크기: A4 전면 칼라<br>
-&ensp;2) 광고파일 제출: 8월 1일(월)-10월 21일(금)<br>
-&ensp;3) 신청 방법: 부스/지면광고 신청서를 작성하여 사무국으로 송부<br>
-<a href="https://www.google.com" class="button">☞ 부스/지면광고 신청서</a><br>
-- 부스 전시 기관<br>
-&ensp;1) 부스운영시간: 11월 16-17일<br>
-</p>
+&ensp;2) 부스 및 지면광고 운영기간: 11월 16-17일<br>
+&ensp;3) 광고파일 제출 기한: 8월 1일(월)-10월 21일(금)<br>
+&ensp;4) 신청 방법: <a href="../file/부스_지면광고_신청서.hwp">부스/지면광고 신청서[다운로드]</a>를 작성하여 사무국으로 송부<br>
+<a href="https://www.google.com" class="button">☞ 부스/지면광고 온라인신청</a><br>
+&ensp;* 지면광고 파일을 시스템에 업로드해 주시거나 용량이 클 경우 geoaidata@gmail.com 으로 제출<br>
+
+<br>
 <br>
 <p class="h6">
-<br>
 문의:<br>
 - 이승국 총무이사 (051-629-6627, seungkuk.lee@pknu.ac.kr)<br>
 - 정분화 사무국장 (02-6490-5682, geoaidata@gmail.com)<br>
 </p>
 <br>
+
+
+
 
 <hr>
 <br>
