--- a/fall/개요.md
+++ b/fall/개요.md
@@ -132,7 +132,7 @@ tilte:
 <p>
 <br>
 - 사전등록 신청<br>
-<a href="https://www.google.com" class="button">☞ 사전등록 온라인신청</a><br>
+<a href="https://naver.me/xTl4SjCS" target="_blank" class="button">☞ 사전등록 온라인신청</a><br>
 </p>
 <p class="h6">
 *사전등록은 네이버폼을 이용하기 때문에 네이버를 사용할 수 없는 환경에서는 등록이 불가능합니다(모바일 데이터 활용 가능).<br>
@@ -151,7 +151,7 @@ tilte:
 - 초록제출 마감: 10월 22일(금)<br>
 - 포맷에 맞춘 초록(2페이지 이내)을 홈페이지에 등록<br>
 - <a href="../file/abstract_template.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
-<a href="https://www.google.com" class="button">☞ 초록접수 온라인신청</a><br>
+<a href="https://naver.me/Gd6q1tKy" target="_blank" class="button">☞ 초록접수 온라인신청</a><br>
 <!-- - 초록템플릿(*.doc): 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
 <a href="https://www.google.com" class="button">☞ 초록템플릿(*.doc)</a> -->
 </p>
@@ -184,7 +184,7 @@ tilte:
 - 특별셰션 구성: 1세션당 논문 4~6편으로 구성<br>
 - 특별세션 비용: 학회 사무국으로 문의<br>
 - 신청방법: <a href="../file/특별세션신청서.hwp" download>특별세션 참가 신청서[다운로드]</a>와 <a href="../file/특별세션_초록접수.xlsx" download>특별세션 초록 템플릿[다운로드]</a> 작성하여 시스템에 파일을 업로드<br>
-<a href="https://www.google.com" class="button">☞ 특별세션 온라인신청</a><br>
+<a href="https://naver.me/5x0Mn5vs" target="_blank" class="button">☞ 특별세션 온라인신청</a><br>
 </p>
 
 <p class="h6">
@@ -203,10 +203,10 @@ tilte:
 - 프로그램 광고 및 홍보부스 협찬 비용: 학회 사무국으로 문의<br>
 - 부스운영시간: 11월 16-17일<br>
 - 프로그램집 광고 협찬<br>
-&ensp;1) 광고크기: A4 전면 칼라<br>
-&ensp;2) 광고파일 제출: 8월 1일(월)-10월 21일(금)<br>
+&ensp;1) 지면광고크기: A4 전면 칼라<br>
+&ensp;2) 지면광고파일 제출: 8월 1일(월)-10월 21일(금)<br>
 &ensp;3) 신청 방법: <a href="../file/부스_지면광고_신청서.hwp" download>부스/지면광고 신청서[다운로드]</a>를 작성하여 시스템에 파일을 업로드<br>
-<a href="https://www.google.com" class="button">☞ 부스/지면광고 온라인신청</a><br>
+<a href="https://naver.me/5Ildsv7s" target="_blank" class="button">☞ 부스/지면광고 온라인신청</a><br>
 </p>
 <br>
 <p class="h6">
