--- a/fall/사전등록.md
+++ b/fall/사전등록.md
@@ -90,7 +90,7 @@ tilte:
 <p>
 <br>
 아래의 [사전등록 온라인신청] 버튼을 클릭 후 신청서 작성 및 제출<br>
-<a href="https://www.google.com" class="button">☞ 사전등록 온라인신청</a><br>
+<a href="https://naver.me/xTl4SjCS" target="_blank" class="button">☞ 사전등록 온라인신청</a><br>
 </p>
 
 <p class="h6">
