--- a/fall/개요.md
+++ b/fall/개요.md
@@ -22,7 +22,7 @@ tilte:
 &ensp;2) 학술대회 및 정기총회 : 11월 16일-17일<br>
 &emsp;* 주최 : 지오에이아이데이터학회<br>
 &emsp;* 주관 : 한국지질자원연구원, 국립생태원, 한국해양과학기술원, 한국항공우주연구원, 극지연구소, 한국환경정책평가연구원, K-water<br>
-&ensp;3) 투어 : 11월 18일
+&ensp;3) 현장 답사(제주 생태 답사) : 11월 18일
 </p>
 
 ※ 단, 사회적 거리두기 4단계의 경우에는 온라인으로 진행합니다.
