--- a/fall/위원회.md
+++ b/fall/위원회.md
@@ -172,7 +172,7 @@ tilte:
       <td>강원대학교</td>
     </tr>
     <tr>
-      <th rowspan=14>위원</th>
+      <th rowspan=16>위원</th>
       <td>강기묵</td>
       <td>K-Water연구원</td>
     </tr>
@@ -183,6 +183,10 @@ tilte:
     <tr>
       <td>김근한</td>
       <td>한국환경연구원</td>
+    </tr>
+    <tr>
+      <td>김진수</td>
+      <td>부경대학교</td>
     </tr>
     <tr>
       <td>박윤희</td>
@@ -205,11 +209,19 @@ tilte:
       <td>충남대학교</td>
     </tr>
     <tr>
+      <td>윤정호</td>
+      <td>한국환경연구원</td>
+    </tr>
+    <tr>
       <td>이상훈</td>
       <td>국립생태원</td>
     </tr>
     <tr>
       <td>이선민</td>
+      <td>한국환경연구원</td>
+    </tr>
+    <tr>
+      <td>이정호</td>
       <td>한국환경연구원</td>
     </tr>
     <tr>
