--- a/fall/지오빅데이터.md
+++ b/fall/지오빅데이터.md
@@ -39,7 +39,7 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../서울시립대"> 서울시립대학교 LARS랩 </a></li>
+    <li><a href="../서울시립대"> 서울시립대학교 GARS랩 </a></li>
     <li><a href="../지오빅데이터"> 지오빅데이터 오픈플랫폼 </a></li>
   </ul>
 </div>
