--- a/fall/위원회.md
+++ b/fall/위원회.md
@@ -118,12 +118,12 @@ tilte:
       <td>㈜해양기술ENG</td>
     </tr>
     <tr>
-      <td>주형태</td>
-      <td>한국해양과학기술원</td>
+      <td>정형섭</td>
+      <td>서울시립대학교</td>
     </tr>
     <tr>
-      <td>채규열</td>
-      <td>㈜마인드포지</td>
+      <td>주형태</td>
+      <td>한국해양과학기술원</td>
     </tr>
     <tr>
       <td>최준명</td>
@@ -172,7 +172,7 @@ tilte:
       <td>강원대학교</td>
     </tr>
     <tr>
-      <th rowspan=16>위원</th>
+      <th rowspan=22>위원</th>
       <td>강기묵</td>
       <td>K-Water연구원</td>
     </tr>
@@ -185,12 +185,24 @@ tilte:
       <td>한국환경연구원</td>
     </tr>
     <tr>
+      <td>김성삼</td>
+      <td>국립재난안전연구원</td>
+    </tr>
+    <tr>
+      <td>김용민</td>
+      <td>국방과학연구소</td>
+    </tr>
+    <tr>
       <td>김진수</td>
       <td>부경대학교</td>
     </tr>
     <tr>
       <td>박윤희</td>
       <td>한국해양과학기술원</td>
+    </tr>
+    <tr>
+      <td>성현승</td>
+      <td>국방과학연구소</td>
     </tr>
     <tr>
       <td>심재헌</td>
@@ -224,6 +236,14 @@ tilte:
       <td>이정호</td>
       <td>한국환경연구원</td>
     </tr>
+        <tr>
+      <td>장재영</td>
+      <td>한국항공우주연구원</td>
+    </tr>
+    <tr>
+      <td>전태균</td>
+      <td>㈜에스아이에이</td>
+    </tr>
     <tr>
       <td>정욱교</td>
       <td>부경대학교</td>
@@ -235,6 +255,10 @@ tilte:
     <tr>
       <td>지준화</td>
       <td>극지연구소</td>
+    </tr>
+    <tr>
+      <td>채규열</td>
+      <td>㈜마인드포지</td>
     </tr>
 
  </tbody>
