--- a/fall/초록접수.md
+++ b/fall/초록접수.md
@@ -126,7 +126,12 @@ tilte:
     <tr>
       <th rowspan=6>GeoAI모델 개발 및 분석</th>
       <td>데이터 분류</td>
-      <td rowspan=6></td>
+      <td rowspan=6>
+      김용민(국방과학연구소)<br>
+      장재영(한국항공우주연구원)<br>
+      전태균(㈜에스아이에이)<br>
+      채규열(㈜마인드포지)
+      </td>
     </tr>
     <tr>
       <td>데이터 검출</td>
@@ -150,6 +155,7 @@ tilte:
       강기묵(K-Wate연구원)<br>
       구형모(서울시립대학교)<br>
       김근한(한국환경연구원)<br>
+      김성삼(국립재난안전연구원)<br>
       박윤희(한국해양과학기술원)<br>
       성현승(국방과학연구소)<br>
       심재헌(한국농촌경졔연구원)<br>
