--- a/fall/위원회.md
+++ b/fall/위원회.md
@@ -122,7 +122,7 @@ tilte:
       <td>한국해양과학기술원</td>
     </tr>
     <tr>
-      <td></td>
+      <td>최종국</td>
       <td>한국해양과학기술원</td>
     </tr>
     <tr>
