--- a/fall/초록접수.md
+++ b/fall/초록접수.md
@@ -149,9 +149,9 @@ tilte:
       <td>기타</td>
     </tr>
     <tr>
-      <th rowspan=13>GeoAI데이터 활용</th>
+      <th rowspan=14>GeoAI데이터 활용</th>
       <td>지질분야</td>
-      <td rowspan=13>
+      <td rowspan=14>
       강기묵(K-Wate연구원)<br>
       구형모(서울시립대학교)<br>
       김근한(한국환경연구원)<br>
@@ -199,6 +199,9 @@ tilte:
     </tr>
     <tr>
       <td>공간정보분야</td>
+    </tr>
+    <tr>
+      <td>국방분야</td>
     </tr>
     <tr>
       <td>기타</td>
