--- a/fall/선영.md
+++ b/fall/선영.md
@@ -46,4 +46,5 @@ tilte:
 </div>
 
 <br>
-<img src="../assets/img/지면광고/LARS.png" style="width:100%;height:100%;">
+<img src="../assets/img/지면광고/선영.png" style="width:100%;height:100%;">
+
