--- a/fall/숙박안내.md
+++ b/fall/숙박안내.md
@@ -66,18 +66,18 @@ tilte:
   </thead>
   <tbody>
     <tr>
-      <th style="width: 20%">엠버시티호텔</th>
-      <td style="width: 20%">5~7만원</td>
-      <td style="width: 20%">도보 3분</td>
-      <td style="width: 20%">무료 주차/Wi-Fi</td>
-      <td style="width: 20%">064-711-8500</td>    
+      <th style="width: 20%">그랜드하얏트 호텔</th>
+      <td style="width: 20%">23만원</td>
+      <td style="width: 20%">행사장 위치</td>
+      <td style="width: 20%">Wi-Fi</td>
+      <td style="width: 20%">064-907-1234</td>    
     </tr>
-        <tr>
-      <th style="width: 20%">위드스테이호텔</th>
-      <td style="width: 20%">5~7만원</td>
-      <td style="width: 20%">도보 3분</td>
+    <tr>
+      <th style="width: 20%">롯데시티호텔</th>
+      <td style="width: 20%">14~15만원</td>
+      <td style="width: 20%">도보 12분</td>
       <td style="width: 20%">무료 주차/Wi-Fi</td>
-      <td style="width: 20%">064-900-2055~6</td>    
+      <td style="width: 20%">064-730-1000</td>    
     </tr>
     <tr>
       <th style="width: 20%">신라스테이</th>
@@ -87,29 +87,42 @@ tilte:
       <td style="width: 20%">064-711-9000</td>    
     </tr>
     <tr>
-      <th style="width: 20%">롯데시티호텔</th>
-      <td style="width: 20%">14~15만원</td>
-      <td style="width: 20%">도보 12분</td>
+      <th style="width: 20%">위드스테이호텔</th>
+      <td style="width: 20%">5~7만원</td>
+      <td style="width: 20%">도보 3분</td>
       <td style="width: 20%">무료 주차/Wi-Fi</td>
-      <td style="width: 20%">064-730-1000</td>    
+      <td style="width: 20%">064-900-2055~6</td>    
     </tr>
+    <tr>
+      <th style="width: 20%">엠버시티호텔</th>
+      <td style="width: 20%">5~7만원</td>
+      <td style="width: 20%">도보 3분</td>
+      <td style="width: 20%">무료 주차/Wi-Fi</td>
+      <td style="width: 20%">064-711-8500</td>    
+    </tr>
+    
   </tbody>
 </table>
 
+<p>
+*그랜드하얏트 호텔의 경우 10월 14일까지 예약이 완료되어야 합니다.<br>
+*그랜드하얏트 호텔에 숙박을 원하시는 경우 빠른 사전 등록 후 예약해주시기 바랍니다.<br>
+</p>
+
 <br>
 
 <p class="h4">
-1. 앰버 시티 호텔
+1. 그랜드하얏트 제주
 </p>
-<img src="../assets/img/hotel1.png " style="width:100%;height:100%;">
+<img src="../assets/img/hotel5.png" style="width:100%;height:100%;">
 <br>
 <br>
 <br>
 
 <p class="h4">
-2. 위드스테이 호텔
+2. 롯데시티 호텔
 </p>
-<img src="../assets/img/hotel2.png" style="width:100%;height:100%;">
+<img src="../assets/img/hotel4.png" style="width:100%;height:100%;">
 <br>
 <br>
 <br>
@@ -122,10 +135,19 @@ tilte:
 <br>
 <br>
 
+
 <p class="h4">
-4. 롯데시티 호텔
+4. 위드스테이 호텔
 </p>
-<img src="../assets/img/hotel4.png" style="width:100%;height:100%;">
+<img src="../assets/img/hotel2.png" style="width:100%;height:100%;">
+<br>
+<br>
+<br>
+
+<p class="h4">
+5. 앰버 시티 호텔
+</p>
+<img src="../assets/img/hotel1.png " style="width:100%;height:100%;">
 <br>
 <br>
 <br>
