--- a/fall/지오빅데이터.md
+++ b/fall/지오빅데이터.md
@@ -41,6 +41,7 @@ tilte:
   <ul>
     <li><a href="../서울시립대"> 서울시립대학교 GARS랩 </a></li>
     <li><a href="../지오빅데이터"> 지오빅데이터 오픈플랫폼 </a></li>
+    <li><a href="../선영"> ㈜선영종합엔지니어링 </a></li>
   </ul>
 </div>
 
