--- a/fall/숙박안내.md
+++ b/fall/숙박안내.md
@@ -105,8 +105,7 @@ tilte:
 </table>
 
 <p>
-*그랜드하얏트 호텔의 경우 10월 14일까지 예약이 완료되어야 합니다.<br>
-*그랜드하얏트 호텔에 숙박을 원하시는 경우 빠른 사전 등록 후 예약해주시기 바랍니다.<br>
+*그랜드하얏트호텔 예약은 10월 14일 금요일까지 학술대회 사전등록후, 예약을 완료하셔야 합니다.<br>
 </p>
 
 <br>
