--- a/fall/개요.md
+++ b/fall/개요.md
@@ -139,6 +139,10 @@ tilte:
 *사전등록 후, 이메일을 못 받으신 분은 사무국 이메일(geoaidata@gmail.com)으로 문의하여 주시기 바랍니다.<br><br>
 </p>
 
+<p>
+- 학회 회원가입 신청<br>
+<a href="https://naver.me/xgGzI1yf" target="_blank" class="button">☞ 학회 회원가입 신청</a><br>
+</p>
 
 
 <hr>
