--- a/fall/해양과학기술.md
+++ b/fall/해양과학기술.md
@@ -46,7 +46,6 @@ tilte:
   </ul>
 </div>
 
-
 <br>
-<img src="../assets/img/지면광고/선영.png" style="width:100%;height:100%;">
+<img src="../assets/img/지면광고/해양과학기술ENG.png" style="width:100%;height:100%;">
 
