--- a/fall/서울시립대.md
+++ b/fall/서울시립대.md
@@ -48,3 +48,6 @@ tilte:
 
 <br>
 <img src="../assets/img/지면광고/LARS.png" style="width:100%;height:100%;">
+<br>
+<br>
+<img src="../assets/img/지면광고/LARS2.png" style="width:100%;height:100%;">
