--- a/fall/튜토리얼세션.md
+++ b/fall/튜토리얼세션.md
@@ -58,7 +58,7 @@ tilte:
 </p>
 
 <p>
-<a href="" target="_blank" class="button">☞ 튜토리얼세션 온라인신청</a><br>
+<a href="https://naver.me/Glmu4SK6" target="_blank" class="button">☞ 튜토리얼세션 온라인신청</a><br>
 </p>
 
 
