--- a/fall/튜토리얼세션.md
+++ b/fall/튜토리얼세션.md
@@ -196,7 +196,7 @@ tilte:
 </p>
 
 <p>
-* 강사 소개 : 김준영(이메일주소)<br>
+* 강사 소개 : 김준영(junyoung.kim@aifactory.page)<br>
 </p>
 <p class="h6">
  - (현) 인공지능팩토리 데이터 사이언스팀 팀장<br>
@@ -241,7 +241,7 @@ tilte:
       <td>Semantic Segmentation</td>
     </tr>
     <tr>
-      <td>Instance Segmentation</td>
+      <td>Instance Segmentation 설명</td>
     </tr>
     <tr>
       <td>실전 문제 실습 - <a href="https://aifactory.space/competition/detail/2067" target="_blank">유체 내 부유 입자 탐지(경량화)</a></td>
@@ -280,7 +280,7 @@ tilte:
 <br>
 
 <p>
-* 강사 소개 : 김태영(이메일주소)<br>
+* 강사 소개 : 김태영(tykim@aifactory.page)<br>
 </p>
 <p class="h6">
  - (현) 인공지능팩토리 대표<br>
@@ -290,3 +290,8 @@ tilte:
  - 경희대학교 우주탐사학과 박사수료<br>
 </p>
 
+<br>
+<p>
+* 교육 시 사용하는 데이터 셋이나 세부 강의 내용은 변동 사항이 있을 수 있습니다.<br>
+* 원활한 교육 진행을 위해 튜토리얼 세션의 등록 및 결제는 사전 완료를 원칙으로 두고 진행하고자 하오니 학회원님들의 많은 양해와 참여 부탁드립니다.<br>
+</p>
