--- a/fall/튜토리얼세션.md
+++ b/fall/튜토리얼세션.md
@@ -48,7 +48,7 @@ tilte:
 - 일시: 11월 15일 화요일 13시 - 18시<br>
 - 장소: 롯데시티호텔 제주 5F 루비룸(초급과정), 6F 샤롯데룸(중급과정)<br>
 - 내용: GeoAI 초급과정 및 중급과정<br>
-- 신청: 튜토리얼세션 신청(온라인신청 링크기재예졍)<br>
+- 신청: 튜토리얼세션 온라인 신청<br>
 - 신청비: 20만원(일반)/10만원(학생)<br>
 </p>
 
