--- a/fall/숙박안내.md
+++ b/fall/숙박안내.md
@@ -107,7 +107,7 @@ tilte:
 <br>
 <p>
 *그랜드하얏트호텔은 사전등록(결제)을 완료한 분들에게만 상기 가격으로 예약 가능하며 숙박 신청은 ~ 2022년 9월 30일(금)까지 호텔 예약신청서를 작성하여 학회 메일로 접수하여 주시면 됩니다.<br> 
-<a href="../file/그랜드하얏트_숙박예약 폼.docx" download class="button">☞ 호텔예약 신청서 다운로드</a><br>
+<a href="../file/그랜드하얏트_숙박예약 폼.docx" class="button" download>☞ 호텔예약 신청서 다운로드</a><br>
 </p>
 
 <br>
