--- a/fall/초록접수.md
+++ b/fall/초록접수.md
@@ -53,13 +53,18 @@ tilte:
 - <a href="../file/abstract_template.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
 <a href="https://naver.me/Gd6q1tKy" target="_blank" class="button">☞ 초록접수 온라인신청</a>
 </p>
-<br>
 <p class="h6">
-<br>
 *초록접수는 네이버폼을 이용하기 떄문에 네이버를 사용할 수 없는 환경에서는 접수가 불가합니다(모바일 데이터 활용가능).<br>
 *초록접수 후, 이메일을 못받으신 분은 사무국 이메일(geoaidata@gmail.com)로 문의하시길 바랍니다.<br>
 *초록접수는 마감일까지 수정이 가능합니다.<br>
 </p>
+<br>
+<p>
+- 특별세션 초록접수는 <a href="../file/특별세션_초록접수.xlsx" download>특별세션 초록 템플릿[다운로드]</a>를 받아 모든 발표의 초록과 함께 접수 부탁드립니다.
+<a href="https://naver.me/xGisoeVr" target="_blank" class="button">☞ 특별세션 초록접수 온라인신청</a>
+</p>
+
+
 
 <!-- <p>
 <br>
