--- a/fall/특별세션.md
+++ b/fall/특별세션.md
@@ -41,8 +41,7 @@ tilte:
 <p>
 - 특별셰션 구성: 1세션당 논문 4~6편으로 구성<br>
 - 특별세션 비용: 학회 사무국으로 문의<br>
-- 신청방법: <a href="../file/특별세션신청서.hwp" download>특별세션 참가 신청서[다운로드]</a>와 <a href="../file/특별세션_초록접수.xlsx" download>특별세션 초록 템플릿[다운로드]</a> 작성하여 시스템에 파일을 업로드<br>
-- 특별세션 초록접수 파일[*.xlsx]의 경우 신청 기관에서 수합한 후 하나의 파일만 제출<br>
+- 신청방법: <a href="../file/특별세션신청서.hwp" download>특별세션 참가 신청서[다운로드]</a>를 작성하여 시스템에 파일을 업로드<br>
 <a href="https://naver.me/5x0Mn5vs" target="_blank" class="button">☞ 특별세션 온라인신청</a><br>
 
 <!-- <hr>
