--- a/fall/초록접수.md
+++ b/fall/초록접수.md
@@ -50,7 +50,7 @@ tilte:
 
 <p>
 - 포맷에 맞춘 초록(2페이지 이내)을 홈페이지에 등록<br>
-- <a href="../file/abstract_template.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
+- <a href="../file/abstract_template_2022.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
 <a href="https://naver.me/Gd6q1tKy" target="_blank" class="button">☞ 초록접수 온라인신청</a>
 </p>
 <p class="h6">
