--- a/fall/부스및지면광고.md
+++ b/fall/부스및지면광고.md
@@ -37,8 +37,8 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../특별세션"> 특별세션 </a></li>
-    <li><a href="../부스및지면광고"> 부스/지면광고 </a></li>
+    <li><a href="../fall/특별세션"> 특별세션 </a></li>
+    <li><a href="../fall/부스및지면광고"> 부스/지면광고 </a></li>
   </ul>
 </div>
 
@@ -88,7 +88,7 @@ tilte:
 <div>
 {%- for company in site.ad-companies -%}
 <a href="{{company[1]}}" target="_blank" class="associated-company">
-<img src="../assets/img/부스지면/{{company[0]}}.png" alt="{{company[0]}}" title="hover text">
+<img src="../fall/assets/img/부스지면/{{company[0]}}.png" alt="{{company[0]}}" title="hover text">
 <div>
 <span class="text">{{company[0]}}<br>사이트 방문</span>
 </div>
