--- a/fall/숙박안내.md
+++ b/fall/숙박안내.md
@@ -37,9 +37,9 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../행사장"> 행사장 </a></li>
-    <li><a href="../행사장오시는길"> 행사장 오시는길 </a></li>
-    <li><a href="../숙박안내"> 숙박안내 </a></li>
+    <li><a href="../fall/행사장"> 행사장 </a></li>
+    <li><a href="../fall/행사장오시는길"> 행사장 오시는길 </a></li>
+    <li><a href="../fall/숙박안내"> 숙박안내 </a></li>
   </ul>
 </div>
 
@@ -111,7 +111,7 @@ tilte:
 <p class="h4">
 1. 그랜드하얏트 제주
 </p>
-<img src="../assets/img/hotel5.png" style="width:100%;height:100%;">
+<img src="../fall/assets/img/hotel5.png" style="width:100%;height:100%;">
 <br>
 <br>
 <br>
@@ -119,7 +119,7 @@ tilte:
 <p class="h4">
 2. 롯데시티 호텔
 </p>
-<img src="../assets/img/hotel4.png" style="width:100%;height:100%;">
+<img src="../fall/assets/img/hotel4.png" style="width:100%;height:100%;">
 <br>
 <br>
 <br>
@@ -127,7 +127,7 @@ tilte:
 <p class="h4">
 3. 신라스테이 호텔
 </p>
-<img src="../assets/img/hotel3.png" style="width:100%;height:100%;">
+<img src="../fall/assets/img/hotel3.png" style="width:100%;height:100%;">
 <br>
 <br>
 <br>
@@ -136,7 +136,7 @@ tilte:
 <p class="h4">
 4. 위드스테이 호텔
 </p>
-<img src="../assets/img/hotel2.png" style="width:100%;height:100%;">
+<img src="../fall/assets/img/hotel2.png" style="width:100%;height:100%;">
 <br>
 <br>
 <br>
@@ -144,7 +144,7 @@ tilte:
 <p class="h4">
 5. 앰버 시티 호텔
 </p>
-<img src="../assets/img/hotel1.png " style="width:100%;height:100%;">
+<img src="../fall/assets/img/hotel1.png " style="width:100%;height:100%;">
 <br>
 <br>
 <br>
