--- a/fall/개요.md
+++ b/fall/개요.md
@@ -28,7 +28,7 @@ tilte:
 ※ 단, 사회적 거리두기 4단계의 경우에는 온라인으로 진행합니다.
 <br><br>
 <p>
-<a href="../fall/file/GeoAI_추계학술대회_리플렛.pdf/" target="_blank" class="button">☞ 학술대회 리플렛</a><br>
+<a href="../fall/file/GeoAI_추계학술대회_리플렛.pdf" target="_blank" class="button">☞ 학술대회 리플렛</a><br>
 </p>
 <hr>
 
@@ -156,7 +156,7 @@ tilte:
 <br>
 - 초록제출 마감: 10월 22일(금)<br>
 - 포맷에 맞춘 초록(2페이지 이내)을 홈페이지에 등록<br>
-- <a href="../file/abstract_template_2022.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
+- <a href="../fall/file/abstract_template_2022.docx" download>초록템플릿[다운로드]</a>: 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
 <a href="https://naver.me/Gd6q1tKy" target="_blank" class="button">☞ 초록접수 온라인신청</a><br>
 <!-- - 초록템플릿(*.doc): 초록 템플릿을 작성하여 시스템에 파일을 업로드<br>
 <a href="https://www.google.com" class="button">☞ 초록템플릿(*.doc)</a> -->
