--- a/fall/지오빅데이터.md
+++ b/fall/지오빅데이터.md
@@ -39,10 +39,10 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../서울시립대"> 서울시립대학교 GARS랩 </a></li>
-    <li><a href="../지오빅데이터"> 지오빅데이터 오픈플랫폼 </a></li>
-    <li><a href="../선영"> ㈜선영종합엔지니어링 </a></li>
-    <li><a href="../해양과학기술"> ㈜해양기술ENG </a></li>
+    <li><a href="../fall/서울시립대"> 서울시립대학교 GARS랩 </a></li>
+    <li><a href="../fall/지오빅데이터"> 지오빅데이터 오픈플랫폼 </a></li>
+    <li><a href="../fall/선영"> ㈜선영종합엔지니어링 </a></li>
+    <li><a href="../fall/해양과학기술"> ㈜해양기술ENG </a></li>
   </ul>
 </div>
 
