--- a/fall/특별세션.md
+++ b/fall/특별세션.md
@@ -70,7 +70,7 @@ tilte:
 <div>
 {%- for company in site.associated-companies -%}
 <a href="{{company[1]}}" target="_blank" class="associated-company">
-<img src="../assets/img/참여기업/{{company[0]}}.png" alt="{{company[0]}}" title="hover text">
+<img src="../fall/assets/img/참여기업/{{company[0]}}.png" alt="{{company[0]}}" title="hover text">
 <div>
 <span class="text">{{company[0]}}<br>사이트 방문</span>
 </div>
