--- a/fall/행사장오시는길.md
+++ b/fall/행사장오시는길.md
@@ -5,9 +5,9 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../행사장"> 행사장 </a></li>
-    <li><a href="../행사장오시는길"> 행사장 오시는길 </a></li>
-    <li><a href="../숙박안내"> 숙박안내 </a></li>
+    <li><a href="../fall/행사장"> 행사장 </a></li>
+    <li><a href="../fall/행사장오시는길"> 행사장 오시는길 </a></li>
+    <li><a href="../fall/숙박안내"> 숙박안내 </a></li>
   </ul>
 </div>
 
