--- a/fall/지오빅데이터.md
+++ b/fall/지오빅데이터.md
@@ -47,6 +47,6 @@ tilte:
 </div>
 
 <br>
-<img src="../assets/img/지면광고/지자연1.PNG" style="width:100%;height:100%;">
-<img src="../assets/img/지면광고/지자연2.PNG" style="width:100%;height:100%;">
+<img src="../fall/assets/img/지면광고/지자연1.PNG" style="width:100%;height:100%;">
+<img src="../fall/assets/img/지면광고/지자연2.PNG" style="width:100%;height:100%;">
 
