--- a/fall/특별세션.md
+++ b/fall/특별세션.md
@@ -21,8 +21,8 @@ tilte:
 <br>
 <div class="gaybar__container">
   <ul>
-    <li><a href="../특별세션"> 특별세션 </a></li>
-    <li><a href="../부스및지면광고"> 부스/지면광고 </a></li>
+    <li><a href="../fall/특별세션"> 특별세션 </a></li>
+    <li><a href="../fall/부스및지면광고"> 부스/지면광고 </a></li>
   </ul>
 </div>
 
